src/objects/TR1__Associated_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Group_1_Doc_Sighted_By__c</fullName>
        <label>Group 1 Doc Sighted By (Old)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_1_Doc_Sighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group 1 Doc Sighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_1_ID_Type__c</fullName>
        <label>Group 1 ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Current DL (Full/ Prov.) - Photocard</fullName>
                </value>
                <value>
                    <fullName>Original Birth Cert. issued within 12 months of birth</fullName>
                </value>
                <value>
                    <fullName>Biometric Residence Permit</fullName>
                </value>
                <value>
                    <fullName>Adoption Certificate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_2_Doc_Sighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group 2 Doc Sighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_2_ID_Received_Date__c</fullName>
        <label>Group 2 ID Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_2a_Date_SIghted__c</fullName>
        <label>Group 2a Date Sighted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_2a_Doc_Sighted_By_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group 2a Doc Sighted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_2a_Doc_Sighted_By__c</fullName>
        <label>Group 2a Doc Sighted By (Old)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_2a_ID_Received_Date__c</fullName>
        <label>Group 2a ID Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_2a_ID_Type__c</fullName>
        <label>Group 2a ID Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current DL (Full/ Prov.) - Photocard</fullName>
                </value>
                <value>
                    <fullName>Current DL (Full/ Prov.) - Paper (Pre 1998)</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate Issued After Time of Birth</fullName>
                </value>
                <value>
                    <fullName>Marriage/Civil Partnership Certificate</fullName>
                </value>
                <value>
                    <fullName>HM Forces ID Card</fullName>
                </value>
                <value>
                    <fullName>Firearms Licence</fullName>
                </value>
                <value>
                    <fullName>Current Driving Licence (Full or Provisional) - Paper (Pre 1998)</fullName>
                    <isActive>false</isActive>
                    <label>Current Driving Licence (Full or Provisional) - Paper (Pre 1998)</label>
                </value>
                <value>
                    <fullName>Current Driving Licence Photocard (Full or Provisional)</fullName>
                    <isActive>false</isActive>
                    <label>Current Driving Licence Photocard (Full or Provisional)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_2b_Date_Sighted__c</fullName>
        <label>Group 2b Date Sighted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_2b_Doc_Sighted_By_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group 2b Doc Sighted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_2b_Doc_Sighted_By__c</fullName>
        <label>Group 2b Doc Sighted By (Old)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_2b_Doc_Sighted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group 2b Doc Sighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_2b_ID_Received_Date__c</fullName>
        <label>Group 2b ID Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_2b_ID_Type__c</fullName>
        <label>Group 2b ID Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage Statement</fullName>
                </value>
                <value>
                    <fullName>Bank or B.Soc Statement</fullName>
                </value>
                <value>
                    <fullName>Bank or B.Soc Acc Opening Conf Letter</fullName>
                </value>
                <value>
                    <fullName>Credit Card Statement</fullName>
                </value>
                <value>
                    <fullName>Financial Statement eg pension</fullName>
                </value>
                <value>
                    <fullName>P45 or P60</fullName>
                </value>
                <value>
                    <fullName>Council tax statement</fullName>
                </value>
                <value>
                    <fullName>Work Permit or Visa</fullName>
                </value>
                <value>
                    <fullName>Letter of Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Benefit Statement eg child benefit</fullName>
                </value>
                <value>
                    <fullName>Gov or gov agency/ loc cnl doc giving entitlement</fullName>
                </value>
                <value>
                    <fullName>EU National ID Card</fullName>
                </value>
                <value>
                    <fullName>Cards carrying the PASS accreditation logo</fullName>
                </value>
                <value>
                    <fullName>Letter from Head Teacher or College Principal</fullName>
                </value>
                <value>
                    <fullName>Bank or Building Society Account Opening Conf Letter</fullName>
                    <isActive>false</isActive>
                    <label>Bank or Building Society Account Opening Conf Letter</label>
                </value>
                <value>
                    <fullName>Bank or Building Society Statement</fullName>
                    <isActive>false</isActive>
                    <label>Bank or Building Society Statement</label>
                </value>
                <value>
                    <fullName>Central/ local gov or gov agency/ local council doc giving entitlement</fullName>
                    <isActive>false</isActive>
                    <label>Central/ local gov or gov agency/ local council doc giving entitlement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Requested_Date__c</fullName>
        <label>ID Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_Submitted_Date__c</fullName>
        <label>ID Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inactive_Compliance_Result__c</fullName>
        <label>Inactive Compliance Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Workable</fullName>
                </value>
                <value>
                    <fullName>Non Payable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instruction_to_Reclear__c</fullName>
        <label>Instruction to Reclear</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Submitted_Date__c</fullName>
        <label>Interview Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InterviewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interviewed_By__c</fullName>
        <label>Interviewed By (Old)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_of_Good_Conduct_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Good Conduct Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Live_Worked_Overseas_End_Date__c</fullName>
        <label>Date Lived/Worked Overseas - End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Live_Worked_Overseas_Start_Date__c</fullName>
        <label>Date Lived/Worked Overseas - Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Check_Received_Date__c</fullName>
        <label>Medical Check Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Check_Sent_Date__c</fullName>
        <label>Medical Check Sent  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Outcome__c</fullName>
        <label>Medical Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Submitted_Date__c</fullName>
        <label>Medical Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NARIC_Approved__c</fullName>
        <inlineHelpText>If Yes, NARIC certificate must by obtained and attached to this record</inlineHelpText>
        <label>NARIC Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCTL_Checked_Date__c</fullName>
        <label>NCTL Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCTL_Next_Check_Required__c</fullName>
        <formula>NCTL_Checked_Date__c +365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCTL Next Check Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCTL_Number__c</fullName>
        <label>NCTL Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCTL_Status__c</fullName>
        <label>NCTL Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Registered</fullName>
                </value>
                <value>
                    <fullName>Provisionally Registered</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Full Qual. Check</fullName>
                    <isActive>false</isActive>
                    <label>Full Qual. Check</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Provisional Trainee</fullName>
                    <isActive>false</isActive>
                    <label>Provisional Trainee</label>
                </value>
                <value>
                    <fullName>Waiver signed</fullName>
                    <isActive>false</isActive>
                    <label>Waiver signed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCTL_URL__c</fullName>
        <defaultValue>&quot;https://sa.education.gov.uk/idp/endOfSession?Systemld=SAFE&amp;Status=DisabledCookiesWarning&quot;</defaultValue>
        <label>NCTL URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NQT_Induction_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NQT Induction Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_Induction_to_be_Completed_By__c</fullName>
        <label>NQT Induction to be Completed by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_Change_Document__c</fullName>
        <label>Name Change Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Marriage</fullName>
                </value>
                <value>
                    <fullName>By Deed</fullName>
                </value>
                <value>
                    <fullName>By Divorce</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Bank__c</fullName>
        <label>Name of Bank</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Account__c</fullName>
        <label>Name on Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OS_DBS_Application_Received_In_UK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OS DBS Original Given to Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS_DBS_Application_Sent_To_UK__c</fullName>
        <label>OS DBS Application Sent To UK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTT_First_Placement_Start_Date__c</fullName>
        <inlineHelpText>This Date is manually entered based on the first day the candidate works in the UK.</inlineHelpText>
        <label>OTT First Placement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OTT_QTS_Required_By__c</fullName>
        <label>OTT QTS Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>On_Update_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If DBS is issued within 19 days, advise the candidate they can register on update service</inlineHelpText>
        <label>On Update Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_DBS_Sighted_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who sighted the original DBS</description>
        <label>Original DBS Sighted by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Group_1_Doc_Seen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Group 1 Doc Seen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Group_2a_Doc_Seen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group 2a Doc Sighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Group_2b_Doc_Seen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Group 2b Doc Seen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overseas_Police_Check_Expiry_Date__c</fullName>
        <label>Overseas Police Check Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overseas_Police_Check_Valid_From__c</fullName>
        <label>Overseas Police Check Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overseas_Police_Check__c</fullName>
        <label>Overseas Police Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>With Police</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overseas_Prohib_Date_Checked__c</fullName>
        <label>Prohibition Order Date Checked - OS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Seen__c</fullName>
        <inlineHelpText>If document used to verify right to work is passport, date passport was sighted must be entered here.</inlineHelpText>
        <label>Passport Seen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PayPal_Payment_Reference__c</fullName>
        <label>PayPal Payment Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Right_to_Work_in_UK__c</fullName>
        <label>Permanent Right to Work in UK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>UK Passport</fullName>
                </value>
                <value>
                    <fullName>EEA or Swiss passport/ National identity card</fullName>
                </value>
                <value>
                    <fullName>Perm residence Registration certificate EEA or Swiss</fullName>
                </value>
                <value>
                    <fullName>Perm residence card</fullName>
                </value>
                <value>
                    <fullName>Current biometric immigration doc (Resident permit)</fullName>
                </value>
                <value>
                    <fullName>Passport with indefinate right to remain</fullName>
                </value>
                <value>
                    <fullName>Current Home office immigration status document + Perm national insurance number doc</fullName>
                </value>
                <value>
                    <fullName>Full UK birth or adoption certificate + national insurance doc</fullName>
                </value>
                <value>
                    <fullName>Birth or adoption certificate issued in the Chanel Isle, Isle of Man or Ireland + National insurance doc</fullName>
                </value>
                <value>
                    <fullName>Certificate of registration or naturalisation as a British citizen + national insurance doc</fullName>
                </value>
                <value>
                    <fullName>Current passport showing the holder can stay in the UK and do the work in question</fullName>
                </value>
                <value>
                    <fullName>Current residence card</fullName>
                </value>
                <value>
                    <fullName>Current immigration status doc + National insurance doc</fullName>
                </value>
                <value>
                    <fullName>Positive Verification notice + certificate of application</fullName>
                </value>
                <value>
                    <fullName>Application registration card + positive verification notice</fullName>
                </value>
                <value>
                    <fullName>Positive verification notice</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Small UK Birth or Adoption Certificate + National Insurance Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Photo_Submitted_Date__c</fullName>
        <label>Photo Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Positive_DBS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Positive DBS compliance check</description>
        <label>Positive DBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post16_Prohib_Date_Checked__c</fullName>
        <label>Prohibition Order Date Checked - Post 16</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Power_Form_URL__c</fullName>
        <formula>HYPERLINK( 

&quot;https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=&quot;&amp;DocuSign_Template_ID__c 
&amp;&quot;&amp;EnvelopeField_AQID=&quot;&amp; Id 
&amp;&quot;&amp;Candidate_UserName=&quot;&amp; TR1__Contact__r.FirstName &amp; &quot;%20&quot; &amp; TR1__Contact__r.LastName 
&amp;&quot;&amp;Candidate_Email=&quot;&amp; TR1__Contact__r.Email 
&amp;&quot;&amp;CredentialCandidateName=&quot;&amp; TR1__Contact__r.FirstName &amp; &quot;%20&quot; &amp; TR1__Contact__r.LastName 
&amp;&quot;&amp;TMAQCandidateBirthDay=&quot;&amp; TEXT(TR1__Contact__r.Birth_Day__c) 
&amp;&quot;&amp;TMAQCandidateBirthMonth=&quot;&amp; TEXT(TR1__Contact__r.Birth_Month__c)
&amp;&quot;&amp;TMAQCandidateCity=&quot;&amp; TR1__Contact__r.OtherCity 
&amp;&quot;&amp;TMAQCandidateDesiredHourly=&quot;&amp; TEXT(TR1__Contact__r.TR1__Desired_Hourly__c)
&amp;&quot;&amp;TMAQCandidateDesiredSalary=&quot;&amp; TEXT(TR1__Contact__r.TR1__Desired_Salary__c) 
&amp;&quot;&amp;TMAQCandidateEmail=&quot;&amp; TR1__Contact__r.Email
&amp;&quot;&amp;TMAQCandidateFirstName=&quot;&amp; TR1__Contact__r.FirstName
&amp;&quot;&amp;TMAQCandidateHomePhone=&quot;&amp;  TR1__Contact__r.HomePhone 
&amp;&quot;&amp;TMAQCandidateLastName=&quot;&amp; TR1__Contact__r.LastName 
&amp;&quot;&amp;TMAQCandidateMiddleInitial=&quot;&amp; TR1__Contact__r.Middle_Initial__c 
&amp;&quot;&amp;TMAQCandidateName=&quot;&amp; TR1__Contact__r.FirstName &amp; &quot;%20&quot; &amp; TR1__Contact__r.LastName 
&amp;&quot;&amp;TMAQCandidatePhone=&quot;&amp; TR1__Contact__r.Phone
&amp;&quot;&amp;TMAQCandidateState=&quot;&amp; TR1__Contact__r.OtherState
&amp;&quot;&amp;TMAQCandidateStreet=&quot;&amp; TR1__Contact__r.OtherStreet
&amp;&quot;&amp;TMAQCandidateZip=&quot;&amp; TR1__Contact__r.OtherPostalCode

, 


&quot;Sign Here&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Form URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTLS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QTLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QTS_Awarded_Date__c</fullName>
        <inlineHelpText>Candidate must complete induction within 5 years of QTS Awarded Date.</inlineHelpText>
        <label>QTS Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qual_Copies_Received_Date__c</fullName>
        <label>Qual. Copies Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualification_Check__c</fullName>
        <label>Qualification Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NCTL</fullName>
                </value>
                <value>
                    <fullName>SET</fullName>
                </value>
                <value>
                    <fullName>EYTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Type2__c</fullName>
        <label>Qualification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overseas Qualifications - Aus/NZ</fullName>
                </value>
                <value>
                    <fullName>Overseas Qualifications - Canada</fullName>
                </value>
                <value>
                    <fullName>Overseas Qualifications - USA</fullName>
                </value>
                <value>
                    <fullName>Overseas Qualifications - Other</fullName>
                </value>
                <value>
                    <fullName>Teacher Qualification</fullName>
                </value>
                <value>
                    <fullName>Support Qualifications</fullName>
                </value>
                <value>
                    <fullName>Post 16 Qualifications</fullName>
                </value>
                <value>
                    <fullName>Early Years Qualifications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <label>Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Qualification_Type2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>B.Ed + State Teaching Certification</fullName>
                </value>
                <value>
                    <fullName>BA + Teacher Training</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Arts / Bachelor of Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Arts/ Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education/ Bachelor of Science (Secondary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education (Primary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education (Special Education)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Health, Sport and Physical Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Primary Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Science and Education in Secondary Teaching</fullName>
                </value>
                <value>
                    <fullName>Bachelors Degree</fullName>
                </value>
                <value>
                    <fullName>BA or BSc + Teacher Training</fullName>
                </value>
                <value>
                    <fullName>BA with QTS</fullName>
                </value>
                <value>
                    <fullName>B ED</fullName>
                </value>
                <value>
                    <fullName>BED with QTS</fullName>
                </value>
                <value>
                    <fullName>BSC with QTS</fullName>
                </value>
                <value>
                    <fullName>BTEC</fullName>
                </value>
                <value>
                    <fullName>CACHE L1</fullName>
                </value>
                <value>
                    <fullName>CACHE L2</fullName>
                </value>
                <value>
                    <fullName>CACHE L3</fullName>
                </value>
                <value>
                    <fullName>CERT ED FE</fullName>
                </value>
                <value>
                    <fullName>City and Guilds 7307</fullName>
                </value>
                <value>
                    <fullName>CTLLS</fullName>
                </value>
                <value>
                    <fullName>Degree</fullName>
                </value>
                <value>
                    <fullName>Degree in Curriculum Subject</fullName>
                </value>
                <value>
                    <fullName>Dip In Childcare and Education</fullName>
                </value>
                <value>
                    <fullName>Dip In Play Work</fullName>
                </value>
                <value>
                    <fullName>Dip in Support Work in Schools</fullName>
                </value>
                <value>
                    <fullName>Diploma in Education &amp; Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>